1. Фильтрация учеников [#110058 #206770]