@@ -7,6 +7,9 @@ import java.util.function.*;
 public class School {
 
     public List<Student> collect(List<Student> students, Predicate<Student> predict) {
-        return students.stream().filter(predict).collect(Collectors.toList());
+        return students.stream()
+                .filter(predict)
+                .collect(Collectors
+                        .toList());
     }
 }
